--- a/index.html
+++ b/index.html
@@ -1,41 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Activity Week 01 - Portal Page">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/currentdate.js"></script>
-    <title>Portal Page</title>
-</head>
-<body>
-    <header>
-        <img src="images/profile_pic.jpg" alt="Profile Picture">
-        <h1>Amon Brollo</h1>
-    </header>  
-    <main>
-        <h2>WDD 230: Assignment Portal</h2>
-        <hr>
-        <nav>
-            <ul>
-                <li>Lesson 02: <a href="https://byui.instructure.com/courses/188934/pages/w02-activity-normalize-css?module_item_id=24098450">Title</a></li>
-                <li>Lesson 03: <a href="https://byui.instructure.com/courses/188934/pages/w02-activity-mobile-browsing?module_item_id=24098460">Title</a></li>
-                <li>Lesson 04: <a href="https://byui.instructure.com/courses/188934/pages/w02-activity-google-fonts-api?module_item_id=24098468">Title</a></li>
-                <li>Lesson 05: <a href="https://byui.instructure.com/courses/188934/pages/w02-activity-design-principles?module_item_id=24098474">Title</a></li>
-                <li>Lesson 06: <a href="https://byui.instructure.com/courses/188934/pages/w02-activity-media-queries?module_item_id=24098482">Title</a></li>
-                <li>Lesson 07: <a href="https://byui.instructure.com/courses/188934/pages/w02-virtual-lab?module_item_id=24098492">Title</a></li>
-                <li>Lesson 08: <a href="https://byui.instructure.com/courses/188934/assignments/8641101?module_item_id=24098406">Title</a></li>
-                <li>Lesson 09: <a href="https://byui.instructure.com/courses/188934/quizzes/3095271?module_item_id=24098518">Title</a></li>
-                <li>Lesson 10: <a href="https://byui.instructure.com/courses/188934/assignments/8641119?module_item_id=24098546">Title</a></li>
-                <li>Lesson 11: <a href="https://byui.instructure.com/courses/188934/discussion_topics/5562822?module_item_id=24098528">Title</a></li>
-            </ul>
-        </nav>
-        <hr>
-    </main>
-</body>
-<footer>
-    <p class="copyright">%copy; .:|:. 2021 Amon Brollo .:|:. RS - Brazil</p>
-    <p class="update">Last Updated: <span id="currentdate"></span></p>
-</footer>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Activity Week 01 - Portal Page">
+        <link rel="stylesheet" href="css/main.css">
+        <title>Portal Page</title>
+    </head>
+    <body>
+        <header>
+            <img src="images/profile_pic.jpg" alt="Profile Picture">
+            <h1>Amon Brollo</h1>
+        </header>  
+        <main>
+            <h2>WDD 230: Assignment Portal</h2>
+            <hr>
+            <nav>
+                <ul>
+                    <li>Lesson 02: <a href="">Title</a></li>
+                    <li>Lesson 03: <a href="">Title</a></li>
+                    <li>Lesson 04: <a href="">Title</a></li>
+                    <li>Lesson 05: <a href="">Title</a></li>
+                    <li>Lesson 06: <a href="">Title</a></li>
+                    <li>Lesson 07: <a href="">Title</a></li>
+                    <li>Lesson 08: <a href="">Title</a></li>
+                    <li>Lesson 09: <a href="">Title</a></li>
+                    <li>Lesson 10: <a href="">Title</a></li>
+                    <li>Lesson 11: <a href="">Title</a></li>
+                </ul>
+            </nav>
+            <hr>
+        </main>
+
+        <footer>
+            <p class="copyright">%copy; .:|:. 2021 Amon Brollo .:|:. RS - Brazil</p>
+            <p class="update">Last Updated: <span id="currentdate"></span></p>
+        </footer>
+        <script src="scripts/CurrentDateAndTime.js"></script>
+        <script src="scripts/CurrentYear.js"></script>
+    </body>
 </html>
