--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Activity Week 01 - Portal Page">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/styles.css">
         <title>Portal Page</title>
     </head>
     <body>
         <header>
-            <img src="images/profile_pic.jpg" alt="Profile Picture">
+            <img src="images/profile_pic.jpg" alt="Profile-Picture">
             <h1>Amon Brollo</h1>
         </header>  
         <main>
