Added class to profile pic

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <img src="images/profile_pic.jpg" alt="Profile-Picture">
+            <img class ="profile_pic" src="images/profile_pic.jpg" alt="Profile Picture">
             <h1>Amon Brollo</h1>
         </header>  
         <main>
