--- a/index.html
+++ b/index.html
@@ -1,43 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Activity Week 01 - Portal Page">
-        <link rel="stylesheet" href="css/styles.css">
-        <title>Portal Page</title>
-    </head>
-    <body>
-        <header>
-            <img class ="profile_pic" src="images/profile_pic.jpg" alt="Profile Picture">
-            <h1>Amon Brollo</h1>
-        </header>  
-        <main>
-            <h2>WDD 230: Assignment Portal</h2>
-            <hr>
-            <nav>
-                <ul>
-                    <li>Lesson 02: <a href="">Title</a></li>
-                    <li>Lesson 03: <a href="">Title</a></li>
-                    <li>Lesson 04: <a href="">Title</a></li>
-                    <li>Lesson 05: <a href="">Title</a></li>
-                    <li>Lesson 06: <a href="">Title</a></li>
-                    <li>Lesson 07: <a href="">Title</a></li>
-                    <li>Lesson 08: <a href="">Title</a></li>
-                    <li>Lesson 09: <a href="">Title</a></li>
-                    <li>Lesson 10: <a href="">Title</a></li>
-                    <li>Lesson 11: <a href="">Title</a></li>
-                </ul>
-            </nav>
-            <hr>
-        </main>
-
-        <footer>
-            <p class="copyright">%copy; .:|:. 2021 Amon Brollo .:|:. RS - Brazil</p>
-            <p class="update">Last Updated: <span id="currentdate"></span></p>
-        </footer>
-        <script src="scripts/CurrentDateAndTime.js"></script>
-        <script src="scripts/CurrentYear.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Brollo's Portal Page">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Portal Page</title>
+</head>
+<body>
+    <header>
+        <img class ="profile_pic" src="images/profile_pic.jpg" alt="Profile Picture">
+        <h1>Amon Brollo</h1>
+    </header>  
+    <main>
+        <h2>WDD 230: Assignment Portal</h2>
+        <hr>
+        <nav>
+            <ul>
+                <li>Lesson 02: <a href="">Title</a></li>
+                <li>Lesson 03: <a href="">Title</a></li>
+                <li>Lesson 04: <a href="">Title</a></li>
+                <li>Lesson 05: <a href="">Title</a></li>
+                <li>Lesson 06: <a href="">Title</a></li>
+                <li>Lesson 07: <a href="">Title</a></li>
+                <li>Lesson 08: <a href="">Title</a></li>
+                <li>Lesson 09: <a href="">Title</a></li>
+                <li>Lesson 10: <a href="">Title</a></li>
+                <li>Lesson 11: <a href="">Title</a></li>
+            </ul>
+        </nav>
+        <hr>
+    </main>
+    <footer>
+        <p class="copyright">&copy; 2022 | Amon Brollo | Brazil</p>
+        <p class="update">Last Updated: <span id="lastUpdate"></span></p>
+    </footer>
+    <script src="scripts/getCurrentDateAndTime.js"></script>
+</body>
 </html>
