Added file path to getCurrentYear function and function id

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
         <hr>
     </main>
     <footer>
-        <p class="copyright">&copy; 2022 | Amon Brollo | Brazil</p>
+        <p class="copyright">&copy; <span id="currentYear"></span> | Amon Brollo | Brazil</p>
         <p class="update">Last Updated: <span id="lastUpdate"></span></p>
     </footer>
     <script src="js/getCurrentDateAndTime.js"></script>
+    <script src="js/getCurrentYear.js"></script>
 </body>
 </html>
