--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <hr>
         <nav>
             <ul>
-                <li>Lesson 02: <a href="">Title</a></li>
+                <li>Lesson 02: <a href="lesson2/design-principles.html">Title</a></li>
                 <li>Lesson 03: <a href="">Title</a></li>
                 <li>Lesson 04: <a href="">Title</a></li>
                 <li>Lesson 05: <a href="">Title</a></li>
