Added right font API and fixed scripts to work

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -9,11 +9,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <title>Design Principles</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Tapestry&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Tapestry&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Tapestry&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"> 
     <style>
         h1, h2, h3 {
             font-family: 'Tapestry', cursive;
@@ -22,7 +22,6 @@
             font-family: 'Lato', sans-serif;
         }
     </style>
-    <title>Design Principles</title>
 </head>
 <body>
     <header>
@@ -36,7 +35,7 @@
         <p class="copyright">&copy; <span id="currentYear"></span> | Amon Brollo | Brazil</p>
         <p class="update">Last Updated: <span id="lastUpdate"></span></p>
     </footer>
-    <script src="WDD230/js/getCurrentDateAndTime.js"></script>
-    <script src="WDD230/js/getCurrentYear"></script> 
+    <script src="js/getCurrentDateAndTime.js"></script>
+    <script src="js/getCurrentYear"></script> 
 </body>
 </html>
