Transfered css over from here to css/small.css

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -14,55 +14,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Tapestry&display=swap" rel="stylesheet"> 
-    <style>
-        h1, h2, h3 {
-            font-family: 'Tapestry', cursive;
-        }
-        h3 {
-        margin: 0;
-        height: 50px;
-        }
-        p,li {
-        font-family: 'Lato', sans-serif;
-        color: white;
-        }
-        a {
-            color: rgb(214, 162, 7);
-        }
-        a:visited{
-            color: rgb(94, 94, 94);
-        }
-        body {
-            background-color: rgb(61, 61, 61);
-            max-width: 550px;
-            margin: 0 auto;
-        }
-        header, footer {
-            background-color: #96A13A;
-            padding: 2em;
-            margin: 0 auto;
-            border-radius: 1.6%;
-            align-items: center;
-        }
-        header {
-            display: grid;
-            grid-template-columns: 200px 1fr;
-            grid-template-rows: auto;
-            grid-gap: 40px;
-        }
-        img {
-            width: 100%;
-        }
-        .title {
-        background-color: #96A13A;
-        margin: 0;
-        padding: 1em;
-        max-width: 250px;
-        }
-    </style>
-    <link rel="stylesheet" href="styles/small.css">
-    <link rel="stylesheet" href="styles/medium.css">
-    <link rel="stylesheet" href="styles/large.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
 </head>
 <body>
     <main class="design-principles">
