Fixed getCurrentYear script and headings

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -1,8 +1,3 @@
-<!--
-    - Proximity
-    - Alignment
-    - Contrast
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -47,7 +42,7 @@
             <h3>Contrast</h3>
           </div>
           <div class="company">
-            <h4>Target</h4>
+            <h4>Vans</h4>
             <a href="vans.com.br">vans.com.br</a>
           </div>
           <div class="img">
@@ -66,7 +61,7 @@
             <h3>Proximity</h3>
           </div>
           <div class="company">
-            <h4>PayPal</h4>
+            <h4>Adidas</h4>
             <a href="adidas.com.br">adidas.com.br</a>
           </div>
           <div class="img">
@@ -86,6 +81,6 @@
         <p class="update">Last Updated: <span id="lastUpdate"></span></p>
     </footer>
     <script src="js/getCurrentDateAndTime.js"></script>
-    <script src="js/getCurrentYear"></script> 
+    <script src="js/getCurrentYear.js"></script> 
 </body>
 </html>
