Fixed external links

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -25,7 +25,7 @@
           </div>
           <div class="company">
             <h4>Yuool</h4>
-            <a href="yuool.com.br">yuool.com.br</a>
+            <a href="https://www.yuool.com.br/">yuool.com.br</a>
           </div>
           <div class="img">
             <img
@@ -43,7 +43,7 @@
           </div>
           <div class="company">
             <h4>Vans</h4>
-            <a href="vans.com.br">vans.com.br</a>
+            <a href="https://www.vans.com.br/">vans.com.br</a>
           </div>
           <div class="img">
             <img
@@ -62,7 +62,7 @@
           </div>
           <div class="company">
             <h4>Adidas</h4>
-            <a href="adidas.com.br">adidas.com.br</a>
+            <a href="https://www.adidas.com.br/">adidas.com.br</a>
           </div>
           <div class="img">
             <img
