Added title, stylesheet links and website info and logo

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site Plan</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <h1>São Leopoldo Chamber of Commerce</h1>
+    <h2>Site Purpose</h2>
+    <p>Help local business and consumers meet in the city of São Leopoldo.</p>
+    <li>saoleochamber.com</li>
+    <img src = "images/Chamber-of-commerce-logo.png"
+    alt = "São Leopoldo Chamber of Commerce Logo">
 </body>
 </html>
