--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -9,11 +9,23 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>São Leopoldo Chamber of Commerce</h1>
-    <h2>Site Purpose</h2>
-    <p>Help local business and consumers meet in the city of São Leopoldo.</p>
-    <li>saoleochamber.com</li>
-    <img src = "images/Chamber-of-commerce-logo.png"
-    alt = "São Leopoldo Chamber of Commerce Logo">
+    <header>
+        <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="target-audience.html">Target Audience</a></li>
+              <li><a href="color-scheme.html">Color Scheme</a></li>
+              <li><a href="typography.html">Typography</a></li>
+            </ul>
+          </nav>
+    </header>
+    <main>
+        <h1>São Leopoldo Chamber of Commerce</h1>
+        <h2>Site Purpose</h2>
+        <p>Help local business and consumers meet in the city of São Leopoldo.</p>
+        <li>saoleochamber.com</li>
+        <img src = "images/Chamber-of-commerce-logo.png"
+        alt = "São Leopoldo Chamber of Commerce Logo">
+    </main>
 </body>
 </html>
