--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="target-audience.html">Target Audience</a></li>
+              <li><a href="color-scheme.html">Color Scheme</a></li>
+              <li><a href="typography.html">Typography</a></li>
+            </ul>
+          </nav>
+    </header>
     <h1>Target Audience</h1>
     <p>People of ages between 16 and 50 in São Leopoldo looking to buy goods and local business looking to advertise their business or anyone with a desire to belong in the local community.</p>
     <h2>Personas</h2>
