Changed 'Local Businesses' to 'Local Business Owner'

--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -22,8 +22,8 @@
     <h1>Target Audience</h1>
     <p>People of ages between 16 and 50 in São Leopoldo looking to buy goods and local business looking to advertise their business or anyone with a desire to belong in the local community.</p>
     <h2>Personas</h2>
-    <h3>Local Businesses</h3>
-    <p>Local businesses will have the opportunity to join this chamber to have visibility for their products and services.</p>
+    <h3>Local Business Owner</h3>
+    <p>Local business Owners will have the opportunity to join this chamber to have visibility for their products and services.</p>
     <h3>Local Costumers</h3>
     <p>People looking to support local business and in general, just looking to fulfill their consumer needs</p>
     <h2>Scenarios</h2>
