Added nav links

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,7 +17,12 @@
         <h1>São Leopoldo</h1>
         <h2>Chamber of Commerce</h2>
         <nav>
-
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="discover.html">Discover</a></li>
+                <li><a href="directory.html">Directory</a></li>
+                <li><a href="join.html">Join</a></li>
+                <li><a href="contact.html">Contact</a></li>
         </nav>
     </header>
     <main>
