--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,5 +31,7 @@
     <footer>
 
     </footer>
+    <script src="js/getCurrentDateAndTime.js"></script>
+    <script src="js/getCurrentYear.js"></script>
 </body>
 </html>
