Fixed stylesheet link and added footer info

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Tapestry&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/base.css">
 </head>
 <body>
     <header>
@@ -30,7 +30,10 @@
         
     </main>
     <footer>
-
+        <p class="copyright">&copy; <span id="currentYear"></span> São Leopoldo Chamber</p>
+        <p class="my-name">Amon Brollo</p>
+        <p><span>WDD 230 Project</span></p>
+        <p class="update">Last Updated: <span id="lastUpdate"></span></p>
     </footer>
     <script src="js/getCurrentDateAndTime.js"></script>
     <script src="js/getCurrentYear.js"></script>
