--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,19 +10,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Tapestry&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
 </head>
 <body>
     <header>
-        <img logo>
+        <img src="images/Chamber-logo.png" alt="São-Leopoldo-Chamber-of-Commerce-logo">
         <h1>São Leopoldo</h1>
         <h2>Chamber of Commerce</h2>
         <nav>
-            <ul>
+            <ul class="navigation">
+                <li><a class="ham" href="#">Menu</a></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <div class="date"></div>
             </ul>
         </nav>
     </header>
@@ -30,6 +34,7 @@
         
     </main>
     <footer>
+        <img src="images/Chamber-logo.png" alt="São-Leopoldo-Chamber-of-Commerce-logo">
         <p class="copyright">&copy; <span id="currentYear"></span> São Leopoldo Chamber</p>
         <p class="my-name">Amon Brollo</p>
         <p><span>WDD 230 Project</span></p>
@@ -37,5 +42,7 @@
     </footer>
     <script src="js/getCurrentDateAndTime.js"></script>
     <script src="js/getCurrentYear.js"></script>
+    <script src="js/nav.js"></script>
+    <script src="js/getCurrentDate.js"></script>
 </body>
 </html>
