➰ Added social media icons

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,6 +18,14 @@
         <img src="images/Chamber-logo.png" alt="São-Leopoldo-Chamber-of-Commerce-logo">
         <h1>São Leopoldo</h1>
         <h2>Chamber of Commerce</h2>
+        <div class="social-media">
+            <a href="#">
+                <img src="images/whatsapp_icon.png" alt="Whatsapp link">
+            </a>
+            <a href="#">
+                <img src="images/facebook_icon.png" alt="Facebook link">
+            </a>
+        </div>
         <nav>
             <ul class="navigation">
                 <li><a class="ham" href="#">Menu</a></li>
