--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,10 +19,10 @@
         <h1>São Leopoldo</h1>
         <h2>Chamber of Commerce</h2>
         <div class="social-media">
-            <a href="#">
+            <a href="https://www.whatsapp.com/">
                 <img src="images/whatsapp_icon.png" alt="Whatsapp link">
             </a>
-            <a href="#">
+            <a href="https://www.facebook.com/">
                 <img src="images/facebook_icon.png" alt="Facebook link">
             </a>
         </div>
