--- a/chamber/index.html
+++ b/chamber/index.html
@@ -15,16 +15,18 @@
 </head>
 <body>
     <header>
-        <img src="images/Chamber-logo.png" alt="São-Leopoldo-Chamber-of-Commerce-logo">
-        <h1>São Leopoldo</h1>
-        <h2>Chamber of Commerce</h2>
-        <div class="social-media">
-            <a href="https://www.whatsapp.com/">
-                <img src="images/whatsapp_icon.png" alt="Whatsapp link">
-            </a>
-            <a href="https://www.facebook.com/">
-                <img src="images/facebook_icon.png" alt="Facebook link">
-            </a>
+        <div class="upper-header">
+            <img src="images/Chamber-logo.png" alt="São-Leopoldo-Chamber-of-Commerce-logo">
+            <h1>São Leopoldo</h1>
+            <h2>Chamber of Commerce</h2>
+            <div class="social-media">
+                <a href="https://www.whatsapp.com/">
+                    <img src="images/whatsapp_icon.png" alt="Whatsapp link">
+                </a>
+                <a href="https://www.facebook.com/">
+                    <img src="images/facebook_icon.png" alt="Facebook link">
+                </a>
+            </div>
         </div>
         <nav>
             <ul class="navigation">
