🔧 Changed date class
Deleted date class from inside the nav tag and placed it outsite after the the closing nav tag and chaged the dic tag to a p tag and the name to 'currentDate'

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,9 +36,9 @@
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <div class="date"></div>
             </ul>
         </nav>
+        <p class="currentDate"></p>
     </header>
     <main>
         
