🔧 Joined the header subtitle with the main title in h1 tag and added a span tag to the main title and five it a class name of 'main-title'

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,8 +17,7 @@
     <header>
         <div class="upper-header">
             <img src="images/Chamber-logo.png" alt="São-Leopoldo-Chamber-of-Commerce-logo">
-            <h1>São Leopoldo</h1>
-            <h2>Chamber of Commerce</h2>
+            <h1><span class="main-title">São Leopoldo</span><br/>Chamber of Commerce</h1>
             <div class="social-media">
                 <a href="https://www.whatsapp.com/">
                     <img src="images/whatsapp_icon.png" alt="Whatsapp link">
