--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,15 +20,13 @@
             <h1><span class="main-title">São Leopoldo</span><br/>Chamber of Commerce</h1>
             <div class="social-media">
                 <a href="https://www.whatsapp.com/">
-                    <img src="images/whatsapp_icon.png" alt="Whatsapp link">
-                </a>
+                    <img src="images/whatsapp_icon.png" alt="Whatsapp link"></a>
                 <a href="https://www.facebook.com/">
-                    <img src="images/facebook_icon.png" alt="Facebook link">
-                </a>
+                    <img src="images/facebook_icon.png" alt="Facebook link"></a>
             </div>
         </div>
         <nav>
-            <ul class="navigation">
+            <ul id="navMenu">
                 <li><a class="ham" href="#">Menu</a></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
