😥 Moved the toggle button to try and fix my toggle problem

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="upper-header">
-            <img src="images/Chamber-logo.png" alt="São-Leopoldo-Chamber-of-Commerce-logo">
+            <img src="images/Chamber-logo.png" alt="São Leopoldo Chamber of Commerce logo">
             <h1><span class="main-title">São Leopoldo</span><br/>Chamber of Commerce</h1>
             <div class="social-media">
                 <a href="https://www.whatsapp.com/">
@@ -24,10 +24,10 @@
                 <a href="https://www.facebook.com/">
                     <img src="images/facebook_icon.png" alt="Facebook link"></a>
             </div>
+            <button id="menuButton"><span id="symbol">&#9776</span><span id="closeMenu">❌</span></button>
         </div>
         <nav>
             <ul id="navMenu">
-                <li><a class="ham" href="#">Menu</a></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
