⛷ Added placeholders for the main content

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -38,7 +38,16 @@
         <p class="currentDate"></p>
     </header>
     <main>
-        
+        <div class="hero">Hero with call to action</div>
+        <div class="event">Events</div>
+        <div class="weather">Weather</div>
+        <div class="news-release">News Releases</div>
+        <div class="join">Join</div>
+          <ul class="spotlights">
+            <li>Spotlight 1</li>
+            <li>Spotlight 2</li>
+            <li>Spotlight 3</li>
+          </ul>        
     </main>
     <footer>
         <img src="images/Chamber-logo.png" alt="São-Leopoldo-Chamber-of-Commerce-logo">
