--- a/chamber/index.html
+++ b/chamber/index.html
@@ -50,11 +50,19 @@
           </ul>        
     </main>
     <footer>
-        <img src="images/Chamber-logo.png" alt="São-Leopoldo-Chamber-of-Commerce-logo">
+      <div class="footer-commerce-info">
+        <div>
+            <img src="images/Chamber-logo.png" alt="São-Leopoldo-Chamber-of-Commerce-logo">
+          <p><strong>São Leopoldo Chamber of Commerce</strong><br />12345 Main St, São Leopoldo, RS 1234567</p>
+        </div>        
+        <p class="contact-info">contact@saoleochamber.com<br />+55 51 987654321<br /><a href="#">Location Map</a></p>       
+      </div>
+      <div class="footer-author-info">
         <p class="copyright">&copy; <span id="currentYear"></span> São Leopoldo Chamber</p>
         <p class="my-name">Amon Brollo</p>
         <p><span>WDD 230 Project</span></p>
         <p class="update">Last Updated: <span id="lastUpdate"></span></p>
+      </div>
     </footer>
     <script src="js/getCurrentDateAndTime.js"></script>
     <script src="js/getCurrentYear.js"></script>
