--- a/chamber/index.html
+++ b/chamber/index.html
@@ -55,7 +55,7 @@
             <img src="images/Chamber-logo.png" alt="São-Leopoldo-Chamber-of-Commerce-logo">
           <p><strong>São Leopoldo Chamber of Commerce</strong><br />12345 Main St, São Leopoldo, RS 1234567</p>
         </div>        
-        <p class="contact-info">contact@saoleochamber.com<br />+55 51 987654321<br /><a href="#">Location Map</a></p>       
+        <p class="contact-info">contact@saoleochamber.com<br />+55 51 987654321<br /><a href="#">📍 Location Map</a></p>       
       </div>
       <div class="footer-author-info">
         <p class="copyright">&copy; <span id="currentYear"></span> São Leopoldo Chamber</p>
