😭 Tried changing a couple of thing to get the nav menu to work. It didn't

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,18 +17,18 @@
 <body>
   <header>
     <div class="upper-header">
-        <img src="images/Chamber-logo.png" alt="São Leopoldo Chamber of Commerce logo">
-        <h1><span class="main-title">São Leopoldo</span><br/>Chamber of Commerce</h1>
-        <div class="social-media">
-          <a href="https://www.whatsapp.com/">
-            <img src="images/whatsapp_icon.png" alt="Whatsapp link"></a>
-          <a href="https://www.facebook.com/">
-            <img src="images/facebook_icon.png" alt="Facebook link"></a>
-        </div>
-        <button id="menuButton"><span id="symbol">&#9776</span><span id="closeMenu">❌</span></button>
+      <img src="images/Chamber-logo.png" alt="São Leopoldo Chamber of Commerce logo">
+      <h1><span class="main-title">São Leopoldo</span><br/>Chamber of Commerce</h1>
+      <div class="social-media">
+        <a href="https://www.whatsapp.com/">
+          <img src="images/whatsapp_icon.png" alt="Whatsapp link"></a>
+        <a href="https://www.facebook.com/">
+          <img src="images/facebook_icon.png" alt="Facebook link"></a>
+      </div>
     </div>
     <nav>
-      <ul id="navMenu">
+      <ul class="navigation">
+        <li><a href="#" oneclick="toggleMenu()">&#9778; Menu</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="discover.html">Discover</a></li>
         <li><a href="directory.html">Directory</a></li>
