--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,7 +28,7 @@
     </div>
     <nav>
       <ul class="navigation">
-        <li><a href="#" oneclick="toggleMenu()">&#9778; Menu</a></li>
+        <li><a href="#" onclick="toggleMenu()">&#9778; Menu</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="discover.html">Discover</a></li>
         <li><a href="directory.html">Directory</a></li>
