🤾🏽‍♂️ Added Emojis to each lesson link and title and lesson link for lesson 5

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <hr>
         <nav>
             <ul>
-                <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
-                <li>Lesson 03: <a href="lesson3/index.html">Site Plan</a></li>
-                <li>Lesson 04: <a href="chamber/index.html">Chamber Home Page</a></li>
-                <li>Lesson 05: <a href="">Title</a></li>
+                <li>Lesson 02: <a href="lesson2/design-principles.html">🎨 Design Principles</a></li>
+                <li>Lesson 03: <a href="lesson3/index.html">🧐 Site Plan</a></li>
+                <li>Lesson 04: <a href="chamber/index.html">🏠 Chamber Home Page</a></li>
+                <li>Lesson 05: <a href="lesson5/bom.html">📘 Book of Mormon - Top 25</a></li>
                 <li>Lesson 06: <a href="">Title</a></li>
                 <li>Lesson 07: <a href="">Title</a></li>
                 <li>Lesson 08: <a href="">Title</a></li>
