--- a/chamber/index.html
+++ b/chamber/index.html
@@ -16,6 +16,8 @@
 </head>
 <body>
   <header>
+    <div id="banner" style="display: block;">
+    <h2>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</h2></div>
     <div class="upper-header">
       <img src="images/Chamber-logo.png" alt="São Leopoldo Chamber of Commerce logo">
       <h1><span class="main-title">São Leopoldo</span><br/>Chamber of Commerce</h1>
@@ -69,5 +71,6 @@
   <script src="js/getCurrentYear.js"></script>
   <script src="js/nav.js"></script>
   <script src="js/getCurrentDate.js"></script>
+  <script src="js/getDay.js"></script>
 </body>
 </html>
