🖼 Added image reference and title for events, weather and join sections

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -41,11 +41,19 @@
   <p class="currentDate"></p>
   </header>
   <main>
-      <div class="hero">Hero with call to action</div>
-      <div class="event">Events</div>
-      <div class="weather">Weather</div>
+      <div class="hero">
+        <img src="http://www.placecage.com/g/800/500">
+      </div>
+      <div class="event"><h2>Events</h2>
+        <img src="images/museum.png">
+      </div>
+      <div class="weather"><h2>Weather</h2>
+        <img src="images/cloudandsun.png">
+      </div>
       <div class="news-release">News Releases</div>
-      <div class="join">Join</div>
+      <div class="join"><h1>Join</h1>
+        <img src="images/collaboration.png">
+      </div>
         <ul class="spotlights">
           <li>Spotlight 1</li>
           <li>Spotlight 2</li>
