🖼 Added spotlight 1 image and changed the hero placeholder image. Also added a Welcome to São Leopoldo heading and a Join Us! link

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,7 +42,13 @@
   </header>
   <main>
       <div class="hero">
-        <img src="http://www.placecage.com/g/800/500">
+        <div class="pop-up">
+          <h2>Welcome to São Leopoldo</h2>
+          <a href="join.html">Join us!</a>
+        </div>
+        <picture>
+          <img src="images/hero-placeholder.png">
+        </picture>
       </div>
       <div class="event"><h2>Events</h2>
         <img src="images/museum.png">
@@ -55,7 +61,8 @@
         <img src="images/collaboration.png">
       </div>
         <ul class="spotlights">
-          <li>Spotlight 1</li>
+          <li class="spotlight-1">Spotlight 1<br>
+            <img src="images/unisinos.jpg"></li>
           <li>Spotlight 2</li>
           <li>Spotlight 3</li>
         </ul>        
