--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>🦥 Lazy Loading</title>
+    <h1>Progressive Leading Images</h1>
 </head>
 <body>
     
