⌨ Added News release title and lipsum. Added spotlight 2 tecnosinos img

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -56,14 +56,21 @@
       <div class="weather"><h2>Weather</h2>
         <img src="images/cloudandsun.png">
       </div>
-      <div class="news-release">News Releases</div>
+      <div class="news-release"><h2>News Releases</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lectus eros, 
+          cursus at feugiat eget, dignissim sed urna. Morbi arcu massa, porta nec mauris sed, 
+          accumsan suscipit nibh. Phasellus vel nisl sed nulla dictum fermentum. Sed eget dictum 
+          dui. Vivamus convallis auctor mollis. Sed egestas nibh non laoreet vehicula. Sed ac 
+          hendrerit diam, a gravida nunc.</p>
+      </div>
       <div class="join"><h1>Join</h1>
         <img src="images/collaboration.png">
       </div>
         <ul class="spotlights">
           <li class="spotlight-1">Spotlight 1<br>
-            <img src="images/unisinos.jpg"></li>
-          <li>Spotlight 2</li>
+            <img src="images/unisinos-small.jpg"></li>
+          <li>Spotlight 2<br>
+            <img src="images/tecnosinos-small.jpg"></li>
           <li>Spotlight 3</li>
         </ul>        
   </main>
