✍🏽 Added image descriptions

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,14 +47,14 @@
           <a href="join.html">Join us!</a>
         </div>
         <picture>
-          <img src="images/hero-placeholder.png">
+          <img src="images/hero-placeholder.png" alt="Hero Placeholder">
         </picture>
       </div>
       <div class="event"><h2>Events</h2>
-        <img src="images/museum.png">
+        <img src="images/museum.png" alt="Meseum">
       </div>
       <div class="weather"><h2>Weather</h2>
-        <img src="images/cloudandsun.png">
+        <img src="images/cloudandsun.png" alt="Cloud and Sun">
       </div>
       <div class="news-release"><h2>News Releases</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lectus eros, 
@@ -64,19 +64,17 @@
           hendrerit diam, a gravida nunc.</p>
       </div>
       <div class="join"><h1>Join</h1>
-        <img src="images/collaboration.png">
+        <img src="images/collaboration.png" alt="Three hand together">
       </div>
         <ul class="spotlights">
           <li class="spotlight-1">Spotlight 1<br>
             <picture>
-              <source media="(min-width 1300px)" srcset="images/unisinos-medium.jpg">
-              <source media="(min-width 520px)" srcset="images/unisinos-medium.jpg">
+              <source media="(min-width 520px)" src="images/unisinos-medium.jpg">
               <img src="images/unisinos-small.jpg" alt="Unisinos">
             </picture></li>
           <li class="spotlight-2">Spotlight 2<br>
             <picture>
-              <source media="(min-width 1300px)" srcset="images/tecnosinos-medium.jpg">
-              <source media="(min-width 520px)" srcset="images/tecnosinos-medium.jpg">
+              <source media="(min-width 520px)" src="images/tecnosinos-medium.jpg">
               <img src="images/tecnosinos-small.jpg" alt="Tecnosinos">
             </picture></li>
           <li class="spotlight-3">Spotlight 3</li>
