🖼 Added source and title for spotlight 3 image

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -77,7 +77,11 @@
               <source media="(min-width 520px)" src="images/tecnosinos-medium.jpg">
               <img src="images/tecnosinos-small.jpg" alt="Tecnosinos">
             </picture></li>
-          <li class="spotlight-3">Spotlight 3</li>
+          <li class="spotlight-3">Spotlight 3
+            <picture>
+              <img src="images/macromix.png" alt="Macromix">
+            </picture>
+          </li>
         </ul>        
   </main>
   <footer>
