🔧 Fixed media by adding : 😅

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -69,12 +69,12 @@
         <ul class="spotlights">
           <li class="spotlight-1">Spotlight 1<br>
             <picture>
-              <source media="(min-width 520px)" src="images/unisinos-medium.jpg">
+              <source media="(min-width:520px)" srcset="images/unisinos-medium.jpg">
               <img src="images/unisinos-small.jpg" alt="Unisinos">
             </picture></li>
           <li class="spotlight-2">Spotlight 2<br>
             <picture>
-              <source media="(min-width 520px)" src="images/tecnosinos-medium.jpg">
+              <source media="(min-width:520px)" srcset="images/tecnosinos-medium.jpg">
               <img src="images/tecnosinos-small.jpg" alt="Tecnosinos">
             </picture></li>
           <li class="spotlight-3">Spotlight 3
