🌞 Added content in the weather section to display weather and windspeen

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -54,7 +54,14 @@
         <img src="images/museum.png" alt="Meseum">
       </div>
       <div class="weather"><h2>Weather</h2>
-        <img src="images/cloudandsun.png" alt="Cloud and Sun">
+        <div class="mid-weather">
+          <img src="images/cloudandsun.png" alt="Cloud and Sun">
+          <p><span id="temp">43</span>°F</p>
+        </div>
+        <p class="weather-type">Cloudy</p>
+        <div class="wind-container">
+          <p>Wind Speed: <span id="windSpeed">5</span>mph | Wind Chill: <span id="windChill"></span>°F</p>
+        </div>
       </div>
       <div class="news-release"><h2>News Releases</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lectus eros, 
