🌤 Added script for wind chill factor

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -111,5 +111,6 @@
   <script src="js/nav.js"></script>
   <script src="js/getCurrentDate.js"></script>
   <script src="js/getDay.js"></script>
+  <script src="js/windChill.js"></script>
 </body>
 </html>
