--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,7 +47,9 @@
           <a href="join.html">Join us!</a>
         </div>
         <picture>
-          <img src="images/hero-placeholder.png" alt="Hero Placeholder">
+          <source media="(min-width:1300px)" srcset="images/large-placeholder.png">
+          <source media="(min-width:520px)" srcset="images/medium-placeholder.png">
+          <img src="images/small-placeholder.png" alt="Hero Placeholder">
         </picture>
       </div>
       <div class="event"><h2>Events</h2>
