--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🦥 Lazy Loading</title>
+    <title>🦥 Lazy Loading</title>    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <h1>Progressive Leading Images</h1>
 </head>
 <body>
