🔧 Added 'alt' to all <img>s and moved <h1> to inside the <body> 🤸🏽‍♂️

--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🦥 Lazy Loading</title>    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="../css/styles.css">
     <style>
         body {
         width: 800px;
@@ -25,27 +24,27 @@
         transition: filter 0.5s;
         }
     </style>
-    <h1>Progressive Leading Images</h1>
 </head>
 <body>
+    <h1>Progressive Leading Images</h1>
     <picture>
-        <img src="images/placeholder.png" data-src="images/pic1.jpg">
+        <img src="images/placeholder.png" data-src="images/pic1.jpg" alt="Sample Picture 1">
     </picture>
     <picture>
-        <img src="images/placeholder.png" data-src="images/pic2.jpg">
+        <img src="images/placeholder.png" data-src="images/pic2.jpg" alt="Sample Picture 2">
     </picture>
     <picture>
-        <img src="images/placeholder.png" data-src="images/pic3.jpg">
+        <img src="images/placeholder.png" data-src="images/pic3.jpg" alt="Sample Picture 3">
     </picture>
     <picture>
-        <img src="images/placeholder.png" data-src="images/pic4.jpg">
+        <img src="images/placeholder.png" data-src="images/pic4.jpg" alt="Sample Picture 4">
     </picture>
     <picture>
-        <img src="images/placeholder.png" data-src="images/pic5.jpg">
+        <img src="images/placeholder.png" data-src="images/pic5.jpg" alt="Sample Picture 5">
     </picture>
     <picture>
-        <img src="images/placeholder.png" data-src="images/pic6.jpg">
+        <img src="images/placeholder.png" data-src="images/pic6.jpg" alt="Sample Picture 6">
     </picture>
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
