--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <h1>Progressive Leading Images</h1>
+    <h1>Progressive Loading Images</h1>
     <picture>
         <img src="images/placeholder.png" data-src="images/pic1.jpg" alt="Sample Picture 1">
     </picture>
